// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders Header, HeaderIcon, ActionBar with different themes 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

.emotion-2 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 4.64em;
  border-bottom: 1px solid transparent;
  border-radius: 2px 2px 0 0;
  background-color: #F5BBBE;
  border-color: #F5BBBE;
}

<Header
  icon={<i />}
  importance="warning"
  theme={
    Object {
      "colors": Object {
        "black": "#fff",
      },
      "current": "dark",
    }
  }
  title="Hello world"
>
  <header
    className="emotion-4 emotion-5"
    importance="warning"
  >
    <HeaderTitle>
      <h1
        className="emotion-0 emotion-1"
      >
        Hello world
      </h1>
    </HeaderTitle>
    <HeaderIcon
      name={<i />}
      squared={true}
    >
      <i
        className="emotion-2 emotion-3"
      >
        <i />
      </i>
    </HeaderIcon>
  </header>
</Header>
`;

exports[`Modal renders a Modal with form 1`] = `
.emotion-18 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-18:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-8 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-6 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 4.64em;
  border-bottom: 1px solid transparent;
  border-radius: 2px 2px 0 0;
  color: #121212;
  background-color: #B5ECEA;
  border-color: #B5ECEA;
}

.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

.emotion-2 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

.emotion-10 {
  margin-right: auto;
}

.emotion-12 {
  margin-left: auto;
}

<Modal
  formPorps={
    Object {
      "onSubmit": [MockFunction],
    }
  }
  icon="question"
  importance="info"
  isForm={true}
  isOpen={true}
  renderActionLeft={[Function]}
  renderActionRight={[Function]}
  title="Did You Know...?"
>
  <ForwardRef(render)>
    <Portal
      containerInfo={
        .emotion-18 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-18:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-8 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-6 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 4.64em;
  border-bottom: 1px solid transparent;
  border-radius: 2px 2px 0 0;
  color: #121212;
  background-color: #B5ECEA;
  border-color: #B5ECEA;
}

.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

.emotion-2 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

.emotion-10 {
  margin-right: auto;
}

.emotion-12 {
  margin-left: auto;
}

<div
          class="ReactModalPortal"
        >
          <div
            class="ReactModal__Overlay ReactModal__Overlay--after-open emotion-20"
          >
            <div
              aria-label="Did You Know...?"
              class="ReactModal__Content ReactModal__Content--after-open emotion-18 emotion-19"
              role="dialog"
              tabindex="-1"
            >
              <form
                class="emotion-16 emotion-17"
              >
                <header
                  class="emotion-4 emotion-5"
                  importance="info"
                >
                  <h1
                    class="emotion-0 emotion-1"
                  >
                    Did You Know...?
                  </h1>
                  <i
                    class="emotion-2 emotion-3"
                  >
                    question
                  </i>
                </header>
                <div
                  class="emotion-8 emotion-9"
                >
                  <main
                    class="emotion-6 emotion-7"
                  >
                    <span>
                      Hello, World!
                    </span>
                  </main>
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <div
                    class="emotion-10 emotion-11"
                  >
                    foobar
                  </div>
                  <div
                    class="emotion-12 emotion-13"
                  >
                    foobar
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open emotion-20"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          aria-label="Did You Know...?"
          className="ReactModal__Content ReactModal__Content--after-open emotion-18 emotion-19"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <OptionalForm
            isForm={true}
          >
            <form
              className="emotion-16 emotion-17"
            >
              <Header
                icon="question"
                importance="info"
                title="Did You Know...?"
              >
                <header
                  className="emotion-4 emotion-5"
                  importance="info"
                >
                  <HeaderTitle>
                    <h1
                      className="emotion-0 emotion-1"
                    >
                      Did You Know...?
                    </h1>
                  </HeaderTitle>
                  <HeaderIcon
                    name="question"
                    squared={true}
                  >
                    <i
                      className="emotion-2 emotion-3"
                    >
                      question
                    </i>
                  </HeaderIcon>
                </header>
              </Header>
              <Centerer
                centerVertically={false}
              >
                <div
                  className="emotion-8 emotion-9"
                >
                  <Main>
                    <main
                      className="emotion-6 emotion-7"
                    >
                      <span>
                        Hello, World!
                      </span>
                    </main>
                  </Main>
                </div>
              </Centerer>
              <ActionBar
                renderActionLeft={[Function]}
                renderActionRight={[Function]}
              >
                <ForwardRef(render)>
                  <div
                    className="emotion-14 emotion-15"
                  >
                    <Right>
                      <div
                        className="emotion-10 emotion-11"
                      >
                        foobar
                      </div>
                    </Right>
                    <Left>
                      <div
                        className="emotion-12 emotion-13"
                      >
                        foobar
                      </div>
                    </Left>
                  </div>
                </ForwardRef(render)>
              </ActionBar>
            </form>
          </OptionalForm>
        </div>
      </div>
    </Portal>
  </ForwardRef(render)>
</Modal>
`;

exports[`Modal renders a vertically centered modal 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  background-color: #000;
  box-shadow: 0.14em 0.14em 0.14em rgba(0,0,0,0.1);
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<Modal
  centerVertically={true}
  contentLabel="Foobar"
  importance="warning"
  isOpen={true}
  theme={
    Object {
      "colors": Object {
        "black": "#000",
      },
      "current": "dark",
    }
  }
>
  <ForwardRef(render)>
    <Portal
      containerInfo={
        .emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  background-color: #000;
  box-shadow: 0.14em 0.14em 0.14em rgba(0,0,0,0.1);
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
          class="ReactModalPortal"
        >
          <div
            class="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
          >
            <div
              aria-label="Foobar"
              class="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  class="emotion-2 emotion-3"
                >
                  <main
                    class="emotion-0 emotion-1"
                  >
                    <span>
                      Hello, World!
                    </span>
                  </main>
                </div>
                <div
                  class="emotion-4 emotion-5"
                />
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          aria-label="Foobar"
          className="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <OptionalForm>
            <div
              className="emotion-6 emotion-7"
            >
              <Centerer
                centerVertically={true}
              >
                <div
                  className="emotion-2 emotion-3"
                >
                  <Main>
                    <main
                      className="emotion-0 emotion-1"
                    >
                      <span>
                        Hello, World!
                      </span>
                    </main>
                  </Main>
                </div>
              </Centerer>
              <ActionBar>
                <ForwardRef(render)>
                  <div
                    className="emotion-4 emotion-5"
                  />
                </ForwardRef(render)>
              </ActionBar>
            </div>
          </OptionalForm>
        </div>
      </div>
    </Portal>
  </ForwardRef(render)>
</Modal>
`;

exports[`Modal renders an adaptive height modal 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

<Modal
  contentLabel="Foobar"
  ignoreHeightLimits={true}
  isOpen={true}
>
  <ForwardRef(render)>
    <Portal
      containerInfo={
        .emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

<div
          class="ReactModalPortal"
        >
          <div
            class="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
          >
            <div
              aria-label="Foobar"
              class="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  class="emotion-2 emotion-3"
                >
                  <main
                    class="emotion-0 emotion-1"
                  >
                    <span>
                      Hello, World!
                    </span>
                  </main>
                </div>
                <div
                  class="emotion-4 emotion-5"
                />
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          aria-label="Foobar"
          className="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <OptionalForm>
            <div
              className="emotion-6 emotion-7"
            >
              <Centerer
                centerVertically={false}
              >
                <div
                  className="emotion-2 emotion-3"
                >
                  <Main>
                    <main
                      className="emotion-0 emotion-1"
                    >
                      <span>
                        Hello, World!
                      </span>
                    </main>
                  </Main>
                </div>
              </Centerer>
              <ActionBar>
                <ForwardRef(render)>
                  <div
                    className="emotion-4 emotion-5"
                  />
                </ForwardRef(render)>
              </ActionBar>
            </div>
          </OptionalForm>
        </div>
      </div>
    </Portal>
  </ForwardRef(render)>
</Modal>
`;

exports[`Modal renders the expected markup 1`] = `
.emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

<Modal
  contentLabel="Foobar"
  isOpen={true}
>
  <ForwardRef(render)>
    <Portal
      containerInfo={
        .emotion-8 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-8:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-0 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

<div
          class="ReactModalPortal"
        >
          <div
            class="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
          >
            <div
              aria-label="Foobar"
              class="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="emotion-6 emotion-7"
              >
                <div
                  class="emotion-2 emotion-3"
                >
                  <main
                    class="emotion-0 emotion-1"
                  >
                    <span>
                      Hello, World!
                    </span>
                  </main>
                </div>
                <div
                  class="emotion-4 emotion-5"
                />
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open emotion-10"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          aria-label="Foobar"
          className="ReactModal__Content ReactModal__Content--after-open emotion-8 emotion-9"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <OptionalForm>
            <div
              className="emotion-6 emotion-7"
            >
              <Centerer
                centerVertically={false}
              >
                <div
                  className="emotion-2 emotion-3"
                >
                  <Main>
                    <main
                      className="emotion-0 emotion-1"
                    >
                      <span>
                        Hello, World!
                      </span>
                    </main>
                  </Main>
                </div>
              </Centerer>
              <ActionBar>
                <ForwardRef(render)>
                  <div
                    className="emotion-4 emotion-5"
                  />
                </ForwardRef(render)>
              </ActionBar>
            </div>
          </OptionalForm>
        </div>
      </div>
    </Portal>
  </ForwardRef(render)>
</Modal>
`;

exports[`Modal renders the expected markup 2`] = `
.emotion-21 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-21:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-8 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-6 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-10 {
  margin: 0 calc(0.71em / 2);
}

.emotion-10:first-child {
  margin-left: 0;
}

.emotion-10:last-child {
  margin-right: 0;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 4.64em;
  border-bottom: 1px solid transparent;
  border-radius: 2px 2px 0 0;
  color: #121212;
  background-color: #B5ECEA;
  border-color: #B5ECEA;
}

.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

.emotion-2 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

.emotion-12 {
  margin-right: auto;
}

.emotion-15 {
  margin-left: auto;
}

<Modal
  actionLeft={
    Array [
      <button>
        foo
      </button>,
      <button>
        foo
      </button>,
    ]
  }
  actionRight={
    <button>
      foo
    </button>
  }
  icon="question"
  importance="info"
  isOpen={true}
  renderActionLeft={[Function]}
  renderActionRight={[Function]}
  title="Did You Know...?"
>
  <ForwardRef(render)>
    <Portal
      containerInfo={
        .emotion-21 {
  font-size: 1rem;
  width: 57.11em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 2px;
  border: 1px solid;
  color: #2E3338;
  background-color: #FFFFFF;
  box-shadow: 0.14em 0.14em 0.14em rgba(18,18,18,0.1);
  border-color: #E3E6E8;
  min-height: 25em;
  max-height: 35.71em;
}

.emotion-21:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(18,18,18,0.6);
}

.emotion-19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.emotion-8 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  padding: 2.04em 7.06em;
}

.emotion-6 {
  min-height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 50px;
  padding: 0.71em;
  border-top: 1px solid #E3E6E8;
}

.emotion-10 {
  margin: 0 calc(0.71em / 2);
}

.emotion-10:first-child {
  margin-left: 0;
}

.emotion-10:last-child {
  margin-right: 0;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 4.64em;
  border-bottom: 1px solid transparent;
  border-radius: 2px 2px 0 0;
  color: #121212;
  background-color: #B5ECEA;
  border-color: #B5ECEA;
}

.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

.emotion-2 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

.emotion-12 {
  margin-right: auto;
}

.emotion-15 {
  margin-left: auto;
}

<div
          class="ReactModalPortal"
        >
          <div
            class="ReactModal__Overlay ReactModal__Overlay--after-open emotion-23"
          >
            <div
              aria-label="Did You Know...?"
              class="ReactModal__Content ReactModal__Content--after-open emotion-21 emotion-22"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="emotion-19 emotion-20"
              >
                <header
                  class="emotion-4 emotion-5"
                  importance="info"
                >
                  <h1
                    class="emotion-0 emotion-1"
                  >
                    Did You Know...?
                  </h1>
                  <i
                    class="emotion-2 emotion-3"
                  >
                    question
                  </i>
                </header>
                <div
                  class="emotion-8 emotion-9"
                >
                  <main
                    class="emotion-6 emotion-7"
                  >
                    <span>
                      Hello, World!
                    </span>
                  </main>
                </div>
                <div
                  class="emotion-17 emotion-18"
                >
                  <div
                    class="emotion-12 emotion-13"
                  >
                    <button
                      class="emotion-10"
                    >
                      foo
                    </button>
                    <button
                      class="emotion-10"
                    >
                      foo
                    </button>
                  </div>
                  <div
                    class="emotion-15 emotion-16"
                  >
                    <button
                      class="emotion-10"
                    >
                      foo
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="ReactModal__Overlay ReactModal__Overlay--after-open emotion-23"
        onClick={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        <div
          aria-label="Did You Know...?"
          className="ReactModal__Content ReactModal__Content--after-open emotion-21 emotion-22"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          role="dialog"
          style={Object {}}
          tabIndex="-1"
        >
          <OptionalForm>
            <div
              className="emotion-19 emotion-20"
            >
              <Header
                icon="question"
                importance="info"
                title="Did You Know...?"
              >
                <header
                  className="emotion-4 emotion-5"
                  importance="info"
                >
                  <HeaderTitle>
                    <h1
                      className="emotion-0 emotion-1"
                    >
                      Did You Know...?
                    </h1>
                  </HeaderTitle>
                  <HeaderIcon
                    name="question"
                    squared={true}
                  >
                    <i
                      className="emotion-2 emotion-3"
                    >
                      question
                    </i>
                  </HeaderIcon>
                </header>
              </Header>
              <Centerer
                centerVertically={false}
              >
                <div
                  className="emotion-8 emotion-9"
                >
                  <Main>
                    <main
                      className="emotion-6 emotion-7"
                    >
                      <span>
                        Hello, World!
                      </span>
                    </main>
                  </Main>
                </div>
              </Centerer>
              <ActionBar
                renderActionLeft={[Function]}
                renderActionRight={[Function]}
              >
                <ForwardRef(render)>
                  <div
                    className="emotion-17 emotion-18"
                  >
                    <Right>
                      <div
                        className="emotion-12 emotion-13"
                      >
                        <button
                          className="emotion-10"
                          key="1"
                        >
                          foo
                        </button>
                        <button
                          className="emotion-10"
                          key="2"
                        >
                          foo
                        </button>
                      </div>
                    </Right>
                    <Left>
                      <div
                        className="emotion-15 emotion-16"
                      >
                        <button
                          className="emotion-10"
                          key="1"
                        >
                          foo
                        </button>
                      </div>
                    </Left>
                  </div>
                </ForwardRef(render)>
              </ActionBar>
            </div>
          </OptionalForm>
        </div>
      </div>
    </Portal>
  </ForwardRef(render)>
</Modal>
`;

exports[`Modal should match props provided to Modal 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: normal;
  font-size: 20px;
  line-height: 1.4;
  color: inherit;
}

<HeaderTitle>
  <h1
    className="emotion-0 emotion-1"
  >
    Did You Know...?
  </h1>
</HeaderTitle>
`;

exports[`Modal should match props provided to Modal 2`] = `
.emotion-0 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
  box-sizing: initial;
  text-align: center;
  font-size: 2.6em;
  height: 0.93em;
  width: 0.93em;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0.56em;
  -webkit-transform: translateY(30%);
  -ms-transform: translateY(30%);
  transform: translateY(30%);
  padding: 0.37em;
  border-radius: 100%;
  background-color: #E3E6E8;
  box-shadow: 0 0 0 2px #FFFFFF;
  color: #2E3338;
}

<HeaderIcon
  name="question"
  squared={true}
>
  <i
    className="emotion-0 emotion-1"
  >
    question
  </i>
</HeaderIcon>
`;

exports[`Modal throws if title is not a string and alt not provided 1`] = `"\`alt\` property is required when \`title\` isn't a string!"`;
